# iris

./: .credo.exs  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: iris_web.ex
lib/iris/: accounts.ex  application.ex  repo.ex
lib/iris/accounts/: invite.ex  passkey_invite.ex  user.ex  user_invite.ex
lib/iris_web/: endpoint.ex  router.ex  telemetry.ex
lib/iris_web/components/: core_components.ex
lib/iris_web/components/layouts/: app.html.heex  root.html.heex
lib/iris_web/controllers/: admin_controller.ex  admin_html.ex  invite_controller.ex  invite_html.ex  page_controller.ex  page_html.ex
lib/iris_web/controllers/admin_html/: index.html.heex  show_user_invite.html.heex
lib/iris_web/controllers/invite_html/: edit.html.heex  index.html.heex  invite_form.html.heex  new.html.heex  show.html.heex
lib/iris_web/controllers/page_html/: home.html.heex
lib/iris_web/live/: invite_live.ex  invite_passkey_live.ex  invite_user_live.ex
lib/iris_web/live/user_live/: form_component.ex  index.ex  index.html.heex  show.ex  show.html.heex
priv/repo/migrations/: 20240712220821_create_invites.exs  20240726222320_create_users.exs  20240727022411_create_user_invites.exs  20240728233823_delete_invites.exs  20240728235705_create_passkey_invites.exs  20240730230648_passkey_invite_add_user_column.exs
src/: admin.rs  db.rs  error.rs  extractors.rs  main.rs  routes.rs  seed_database.rs  template.rs  views.rs
src/js/: prettify_datetimes.js
src/models/: audit_log.rs  group.rs  invite_passkey.rs  mod.rs  passkey.rs  user.rs
static/: passkey.js  prettify_datetimes.js
test/iris/: accounts_test.exs
test/iris_web/controllers/: admin_controller_test.exs  invite_controller_test.exs  page_controller_test.exs
test/iris_web/live/: invite_user_live_test.exs  user_live_test.exs
test/support/: conn_case.ex  data_case.ex
test/support/fixtures/: accounts_fixtures.ex
