[package]
name = "iris"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "seed_database"
path = "src/seed_database.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
chrono = "0.4.38"
maud = { version = "0.26.0", features = [] }
poem = { version = "3.0.1", features = ["anyhow", "embed", "session"] }
rust-embed = "8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.3", features = ["kv-mem", "protocol-http"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
